New Window when adding Task or List

--- a/src/main/css/style.css
+++ b/src/main/css/style.css
@@ -60,7 +60,7 @@ Text{
 
 .overlay {
     -fx-background-color: #323636;
-    -fx-background-radius: 10;
+/*    -fx-background-radius: 10;*/
     -fx-padding: 100;
     -fx-spacing: 50;
 }
