--- a/src/main/css/style.css
+++ b/src/main/css/style.css
@@ -10,7 +10,6 @@ Button {
     -fx-font-weight: bold;
     -fx-border-radius: 10;
     -fx-border-color: #c379ef;
-
 }
 
 Button:hover {
@@ -56,17 +55,18 @@ Text{
 
 .overlayBackground {
     -fx-background-color: rgba(0, 0, 0, 0.5);
+    -fx-padding: 20 270;
 }
 
 .overlay {
     -fx-background-color: #323636;
-/*    -fx-background-radius: 10;*/
-    -fx-padding: 100;
-    -fx-spacing: 50;
+    -fx-background-radius: 10;
+    -fx-padding: 20;
+    -fx-spacing: 5;
 }
 
 .titre {
-    -fx-font-size: 25;
+    -fx-font-size: 30;
     -fx-font-family: "Segoe UI";
     -fx-font-weight: bold;
     -fx-text-fill: white;
@@ -80,6 +80,7 @@ TextArea {
     -fx-background-radius: 10;
     -fx-padding: 10;
     -fx-text-fill: white;
+    -fx-max-width: 500;
 }
 
 TextArea .content {
@@ -97,5 +98,23 @@ TextArea .content {
 
 .quitter:hover {
     -fx-background-color: red;
+    -fx-text-fill: white;
+}
+
+.tag {
+    -fx-text-fill: white;
+    -fx-font-size: 15;
+    -fx-font-family: "Segoe UI";
+    -fx-font-weight: bold;
+}
+
+.btnTag {
+    -fx-text-fill: white;
+    -fx-font-size: 15;
+    -fx-border-color: transparent;
+}
+
+.btnTag:hover {
+    -fx-background-color: transparent;
     -fx-text-fill: white;
 }
