Désolé Loris j'ai changé une ligne de CSS

--- a/src/main/css/style.css
+++ b/src/main/css/style.css
@@ -1,7 +1,7 @@
 /* ### Composants JavaFX ### */
 
 Button {
-    -fx-background-color: transparent;
+    -fx-background-color: rgba(0, 0, 0, 0.5);
     -fx-background-radius: 10;
     -fx-padding: 5;
     -fx-text-fill: #c379ef;
